# rmgdft

./: .gitignore  .readthedocs.yaml  CMakeCPackOptions.cmake.in  CMakeFindRootPath.inc  CMakeLists.txt  CMakeLists.txt.distribution  COPYING  COPYRIGHT  CREDITS  CTestConfig.cmake  Dashboard.cmake  Makefile  NEB_generate.py  README  README.md  README.stable  README.windows  frontier.job  frontier.sh  make.linux  make_conf.h.in  mkdocs.yml  rmgwin.bat  script_to_rmg  svnrev.h.in  vendor.yml
Diagonalization/: CMakeLists.txt  DavidsonOrtho.cpp  DsyevdDriver.cpp  DsyevjDriver.cpp  DsygvdDriver.cpp  DsygvdMgDriver.cpp  DsygvjDriver.cpp  FoldedSpectrum.cpp  FoldedSpectrumGSE.cpp  FoldedSpectrumIterator.cpp  FoldedSpectrumOrtho.cpp  FoldedSpectrumScalapackGSE.cpp  FoldedSpectrumScalapackOrtho.cpp  FoldedSpectrumSetup.cpp  MgridOrtho.cpp  ortho.cpp
Finite_diff/: AppCilrDriver.cpp  AppCilrFourth.cpp  AppCilrSixth.cpp  AppCir.cpp  AppGradPfft.cpp  ApplyAOperator.cpp  ApplyBOperator.cpp  ApplyGradient.cpp  ApplyLaplacian.cpp  CMakeLists.txt  FiniteDiff.cpp  FiniteDiff_Cbindings.cpp  app6_del2.c  app_ci_fourth_f_gpu.cu  app_ci_fourth_gpu.cu  app_ci_sixth_f_gpu.cu  app_ci_sixth_gpu.cu  app_cil.c  app_cil_driver.c  app_cil_driver.cpp  app_cil_fourth.c  app_cil_fourth_f.c  app_cil_sixth.c  app_cil_sixth_f.c  app_cilr_drive.c  app_cilr_fourth.c  app_cilr_sixth.c  app_cir.c  app_cir_bcc.c  app_cir_bcc.cpp  app_cir_beta_fourth.c  app_cir_beta_sixth.c  app_cir_driver.c  app_cir_driver.cpp  app_cir_fcc.c  app_cir_fcc.cpp  app_cir_fourth.c  app_cir_fourth_f.c  app_cir_hex.c  app_cir_hex.cpp  (+6 more)
Input/: AutoSet.cpp  CMakeLists.txt  CheckValue.cpp  GetPrimeFactors.cpp  InputKey.cpp  LoadAllElectronPseudo.cpp  LoadPseudo.cpp  LoadUpfPseudo.cpp  LoadXmlPseudo.cpp  MapElements.cpp  ReadCommon.cpp  ReadDynamics.cpp  ReadForces.cpp  ReadInit.cpp  ReadKpoints.cpp  ReadKpointsBandstructure.cpp  ReadPseudo.cpp  ReadRmgAtoms.cpp  ReadTFAtoms.cpp  ReadVelocities.cpp  RmgInputFile.cpp  SetupGrids.cpp  Upf.cpp  Verify.cpp  WriteInputOptions.cpp  assign.c  assign_species.c  cast.c  catNodes.c  countItems.c  filetostr.c  findNode.c  get_data.c  get_symbol.c  input.c  newNode.c  pdb_clean.c  popItem.c  read_common.c  read_init.c  (+4 more)
Input/Atoms/: CMakeLists.txt  ReadRmgAtoms.cpp
Misc/: ATL_assert.c  BaseGrid.cpp  BaseGrid_Cbindings.cpp  BaseThread.cpp  BaseThread_Cbindings.cpp  CMakeLists.txt  CheckSetDefault.cpp  CountAtomicOrbitals.cpp  CreateMmapArray.cpp  DeleteNvmeArrays.cpp  DeviceSynchronize.cpp  DgetrftrsDriver.cpp  DipoleCorrection.cpp  DistributeToGlobal.cpp  Dos.cpp  DsyevdDriver.cpp  DsyevjDriver.cpp  DsygvdDriver.cpp  DsygvjDriver.cpp  Elpa.cpp  FftFilter.cpp  FftFreqBin.cpp  FftGradient.cpp  FftInitPlans.cpp  FftInterpolation.cpp  FftLaplacian.cpp  FftRestrict.cpp  FftSmoother.cpp  Fft_Cbindings.cpp  FileOpenAndCreate.cpp  FilenameIncrement.cpp  Fill.cpp  Fill_on.cpp  FineGrid.cpp  FiniteDiffLap.cpp  GeneralDiag.cpp  GetFdFactor.cpp  GetFdFactor.cpp.sav1  GetPlanarAnisotropy.cpp  GetRecommendedThreadNumber.cpp  (+181 more)
NEGF/: CMakeLists.txt  Make.aix  Make.garnet  Make.linux  Make.linux_mpi  Make.linux_mpich  Make.xk-cray  Make.xk-gnu  Make.xt  Makefile  current_scan.cpp  nlforce1.c
NEGF/Common/: CMakeLists.txt  H01_to_HCL.c  H01_to_HCL.cpp  HijUpdate.cpp  InitNegf.cpp  Main.cpp  QuenchNegf.cpp  ReadInterpolateOrbitals.cpp  RmgThread.cpp  Run.cpp  ScfNegf.cpp  SetEnergyWeight.cpp  SetEnergyWeightNoneq.cpp  Sgreen_c.c  Sgreen_c.cpp  Sgreen_c_noneq_p.c  Sgreen_c_noneq_p.cpp  Sgreen_c_p.c  Sgreen_c_p.cpp  Sgreen_c_wang.c  Sgreen_cond_p.c  Sgreen_cond_p.cpp  Sgreen_p.c  Sgreen_semi_infinite_p.c  Sgreen_semi_infinite_p.cpp  Sigma.c  Sigma_p.c  Sigma_p.cpp  Stransfer_p.c  X_to_distribute_soft.c  X_to_distribute_soft.cpp  aainit.c  allocate_masks.c  allocate_matrix_LCR.c  allocate_matrix_LCR.cpp  allocate_matrix_soft.c  allocate_matrix_soft.cpp  allocate_psi.c  app10_del2.c  app6_del2.c  (+373 more)
NEGF/Cuda_funcs/: CMakeLists.txt  Sgreen_cuda.c  genvpsi_gpu.cu  matrix_inverse_anyprobe_cuda.c  matrix_inverse_cuda.c  rho_munu_cuda.c  rho_psi_times_psi.cu
NEGF/Headers/: LCR.h  arch.h  blacs.h  blas.h  blas3_def.h  cei.h  const.h  const_negf.h  fftw.h  force.h  hybrid.h  init_var_negf.h  inputs.h  lapack_def.h  macros.h  main.h  main_ne.h  md.h  method.h  my_finegrid.h  my_mpi.h  my_scalapack.h  negf_prototypes.h  overlap.h  params.h  pmo.h  prototypes.h  prototypes_negf.h  (+7 more)
ON/: CMakeLists.txt  Make.aix  Make.garnet  Make.linux  Make.xt  Makefile
RMG/: CMakeLists.txt  Make.aix  Make.garnet  Make.linux  Make.xk-gnu  Make.xt  Makefile  in.c60  in.sample  in.sample.short
RmgLib/: BaseGrid.cpp  BaseGrid.h  BaseThread.cpp  BaseThread.h  BaseThreadControl.h  CMakeLists.txt  CREDITS  FiniteDiff.h  Lattice.cpp  Lattice.h  Mgrid.cpp  Mgrid.h  RmgLib_version.h  RmgSumAll.cpp  RmgSumAll.h  RmgTimer.cpp  RmgTimer.h  TradeImages.cpp  TradeImages.h  app_cil_driver.cpp  boundary_conditions.h  get_vh.cpp  pack_ptos.cpp  pack_stop.cpp  packfuncs.cpp  packfuncs.h  rmg_error.cpp  rmg_error.h  vhartree.h
Tiled-MM/: .gitignore  CMakeLists.txt  README.md
US_PP/: Atomic.cpp  Atomic_Cbindings.cpp  CMakeLists.txt  CubicHarmonic.cpp  DelocalizedWeight_one.cpp  FindFftwPhaseLocalpp.cpp  FindPhase.cpp  FindPhaseKpoint.cpp  GetPhaseSpecies.cpp  GetQI.cpp  InitClebschGordan.cpp  InitDelocalizedLocalpp.cpp  InitDelocalizedObject.cpp  InitDelocalizedOrbital.cpp  InitDelocalizedWeight.cpp  InitDelocalizedWeight_onek.cpp  InitLocalBackward.cpp  InitLocalForward.cpp  InitLocalObject.cpp  InitLocalizedOrbital.cpp  InitLocalizedWeight.cpp  InitOrbital.cpp  InitPseudo.cpp  InitQfunct.cpp  InitSemilocalBessel.cpp  InitSpinOrbit.cpp  InitWeight.cpp  InitWeightOne.cpp  PackFine2Rhogrid.cpp  PackGftoc.cpp  Radius2grid.cpp  US_Cbindings.cpp  Ylm.cpp  aainit.c  apply_mask_function.c  backout_mask_function.c  exc_off_pbe.f  filter_potential.c  find_phase.c  get_QI.c  (+40 more)
XClibs/: CMakeLists.txt  dft_setting_params.f90  dft_setting_routines.f90  qe_drivers_gga.f90  xc_wrapper_gga.f90  xclib_utils_and_para.f90
spglib/: CMakeLists.txt
zfp/: CMakeLists.txt  Config
(+5541 files in other folders)
